--- a/index.html
+++ b/index.html
@@ -34,7 +34,28 @@
                 <h3>▼</h3>
             </div>
         </div>
-        <div class="navbar">navbar</div>
+        <div class="navbar">
+            <div class="navbar-container">
+                <div class="icons-container"> 
+                    <div class="navbar-item home">
+                        <i class="icon-home"> </i>
+                        <h3>Home</h3>
+                    </div>
+                    <div class="navbar-item trending">
+                        <i class="icon-trending"> </i>
+                        <h3>Trending</h3>
+                    </div>
+                    <div class="navbar-item favorites">
+                        <i class="icon-likes"> </i>
+                        <h3>Favorites</h3>
+                    </div>
+                </div>
+                <div class="navbar-item settings">
+                    <i class="icon-settings"></i>
+                    <h3>Settings</h3>
+                </div>
+            </div>
+        </div>
         <div class="series">series</div>
     </div>
 
